--- a/apps/mobile-app/package.json
+++ b/apps/mobile-app/package.json
@@ -22,7 +22,8 @@
     "eslint": "^8.36.0",
     "eslint-plugin-import": "^2.27.5",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-config": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
